# MyPetService

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/api/: status.py
app/schemas/technical/: technical.py
github/workflows/: tests.yml
src/clients/: api_client.py  http_builder.py
src/models/technical/: technical.py
src/tools/assertions/: common.py
tests/api/technical/: test_technical.py
